--- a/Prioject_ONE/MainWindow.xaml
+++ b/Prioject_ONE/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Prioject_ONE.MainWindow"
+﻿<Window x:Class="ColorPicker_WPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Prioject_ONE"
+        xmlns:local="clr-namespace:ColorPicker_WPF"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="550" ResizeMode="NoResize" KeyDown="ColorListAddKey">
     <Grid>
